apps/dssp-targetp-58/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-58
  namespace: dev
  labels:
    app: dssp-targetp-58
    backstage.io/kubernetes-id: dssp-targetp-58
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-58
  template:
    metadata:
      labels:
        app: dssp-targetp-58
        backstage.io/kubernetes-id: dssp-targetp-58
        environment: dev
    spec:
      containers:
        - name: dssp-targetp-58
          image: chaitanyapandeygspann/dssp-targetp-58:1.0.1
          ports:
            - containerPort: 5000
